# waid-python

./: .readthedocs.yml  LICENSE.md  README.md  pyproject.toml
utils/: ingest-hadoop-logs.py
waid/: __init__.py  config.py  console.py  mp.py  pretty.py  timing.py
waid/testing/: __init__.py
